wp-content/themes/healthkart/assets/scss/_home.scss
.banner {
	margin-top:30px;
	&-slider {
		.slider {
			opacity: 0;
			visibility: hidden;
			transition: opacity 1s ease;
			-webkit-transition: opacity 1s ease;
			&.slick-initialized {
				visibility: visible;
				opacity: 1;
			}
		}
		.slick-slide {
			.slide__img {
				img {
					border-radius: 24px;
					height: 420px;
					width: 100%;
					object-fit: cover;
					@media (max-width: 767px) {
						height: 300px;
					}
				}
			}
		}
	}
	&-category {
		margin-top: 20px;
		padding-left: 0;
		padding-right: 0;
		&-single {
			padding:0 5px;
			position: relative;
			&-image {
				position: relative;
				overflow: hidden;
				border-radius: 10px;
				img {
					border-radius: 10px;
					height: 238px;
					width: 100%;
					object-fit: cover;
					transition: transform 250ms ease-in-out;

					@media(max-width:768px){
						height: 114px;
					}
				}
			}
			&-title {
				position: absolute;
				bottom: 30px;
				left: 50%;
				transform: translate(-50%, -50%);
				color: white;
				z-index: 2;
				font-size: 26px;
				font-weight: 900;
				text-align: center;
				width: 100%;
				line-height: 100%;
				@media(max-width:768px){
					font-size:16px;
					bottom:10px;
				}
			}
			@media(max-width:768px){
				padding:0 4.75px;
			}
			&:first-child{
				padding-left: 0;
			}
			&:last-child{
				padding-right: 0;
			}
			a{
				&:hover{
					.banner-category-single-image{
						img{
							transform: scale(1.1);
						}
					}
				}
			}
		}
		&-title {
			@media (min-width: 768px) {
				display: none;
			}
			@media (max-width: 767px) {
				display: block;
				color: #090909;
				font-size: 20px;
				line-height: 140%;
				font-weight: bold;
				margin: 20px 0 10px;
			}
		}
	}
	@media(max-width:768px){
		margin-top:20px;
	}
	&-animated{
		display: flex;
		height: 544px;
		padding: 0;
		border-radius: 10px;
		overflow: hidden;
		.slide-box{
			overflow: hidden;
			position: relative;
			width: 100%;
			transition:width 500ms ease-in-out;
			&__img{
				height: 100%;
				img{
					height: 100%;
					object-fit: cover;
				}
			}
			&__content1{
				visibility: hidden;
				opacity: 0;
				width: 464px;
				.category-container{
					margin:15px 0 15px;
					span, span a{
						color: #fff;
					}
					span{
						&.dot{
							font-size: 7px;
							position: relative;
							i{
								position: absolute;
								left: -4px;
								top: 0;
							}
						}
						&:not(:last-child){
							margin-right: 7px;
						}
					}
				}
			}
			&__content2{
				width: 232px;
				visibility: visible;
				opacity: 1;
			}
			&__content1, &__content2{
				position: absolute;
				bottom: 60px;
				z-index: 2;
				padding: 0 30px;
				transition: opacity 500ms ease-in-out;

				.blog-title{
					a{
						color: #fff;
						font-weight: bold;
					}
				}
			}
			&.show{
				width: 200%;
				.slide-box{
					&__content1{
						visibility: visible;
						opacity: 1;
					}
					&__content2{
						visibility: hidden;
						opacity: 0;
					}
				}
			}
			.overlay{
				border-radius: 0px;
				background: linear-gradient(0deg, #0d1014 0%, #090B0E00 100%);
				opacity: 0.8;
			}
		}
		@media(max-width:768px) {
			flex-direction: column;
			height: 615px;
			.slide-box{
				height: 130px;
				width: 100% !important;
				transition:height 500ms ease-in-out;
				&__img{
					img{
						height: 225px;
						width: 100%;
					}
				}
				&__content1, &__content2{
					width: 100%;
					bottom:10px;
				}
				&__content1{
					.blog-title{
						margin-bottom: 5px;
						opacity: 0 !important;
						visibility: hidden !important;
					}
					.last-read{
						font-size: 12px;
					}
					.category-container{
						margin:1px 0 10px;
					}
				}
				&__content2{
					opacity: 1 !important;
					visibility:visible !important;
					transform: translateY(0);
					transition:transform 300ms ease-in;
				}
				&.show{
					height: 225px;
					.slide-box__content2{
						transform: translateY(-160px);
					}
				}
			}
		}
		@media(max-width:1024px) and (min-width:992px){
			.slide-box{
				&__content1{
					width: 372px;
				}
			}
		}
		@media(max-width:768px) and (min-width:450px){
			.slide-box{
				&.show{
					.slide-box__content2{
						transform: translateY(-100px);
					}
				}
			}
		}
	}
}
/* ... */

